released to sourceforge, snapshot version that has a work around for nested subrerpots
git-svn-id: https://dynamicjasper.svn.sourceforge.net/svnroot/dynamicjasper/api/tags/release_1_3_3-SNAPSHOT1@208 2bfdcaec-5528-0410-9d21-f7f2b6497bdd